--- a/public/stylesheets/sass/base.scss
+++ b/public/stylesheets/sass/base.scss
@@ -266,7 +266,7 @@ body {
     margin-bottom: 4px;
   }
   a.venue-link {
-    color: $ORANGE;
+    //color: $ORANGE;
     text-decoration: none;
   }
 }
