--- a/public/stylesheets/sass/pages/artists.scss
+++ b/public/stylesheets/sass/pages/artists.scss
@@ -70,7 +70,7 @@
         }
       }
       .venue-link {
-        color: $ORANGE;
+        //color: $ORANGE;
       }
       #related_videos {
         li {
