--- a/public/stylesheets/sass/pages/video.scss
+++ b/public/stylesheets/sass/pages/video.scss
@@ -7,7 +7,7 @@
       background: url(/images/masthead_bg/videos.png) repeat-x;
     }
     .venue-link {
-      color: $ORANGE;
+      //color: $ORANGE;
     }
     #related_videos {
       li {
