--- a/public/stylesheets/sass/base.scss
+++ b/public/stylesheets/sass/base.scss
@@ -295,6 +295,9 @@ body {
       white-space:nowrap;
       margin-bottom:0px;
     }
+    .name {
+      margin-top:3px;
+    }
   }
   li.last .video-thumb {
     margin-right:0px;
