--- a/public/stylesheets/sass/components/lists.scss
+++ b/public/stylesheets/sass/components/lists.scss
@@ -45,6 +45,7 @@
           }
           .name {
             margin-bottom: 2px;
+            margin-top:3px;
           }
           .byline {
             margin-bottom: 0px;
