--- a/app/views/venues/index.html.haml
+++ b/app/views/venues/index.html.haml
@@ -2,7 +2,7 @@
 
 .col-1
   .div{:style => 'height:1px;'} &nbsp;
-  .fixed{:style => 'margin-top:-1px;'}
+  .fixed-on-scroll{:style => 'margin-top:-1px;'}
     .searchy-inline
       .floatleft#search-by-name.mr10
         = form_tag venues_url, :method => 'get' do
