--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -65,9 +65,10 @@
       %script{:src => "http://maps.google.com/maps/api/js?sensor=false"}
   
       - if @venue_map
-        %script= "VENUE_MAP = true;"
-      :javascript
+        :javascript
+          VENUE_MAP = true;
 
+      :javascript
         function initializeScrollObserver() {
           var fixed = $('.fixed-on-scroll');
           if (fixed && fixed.length === 1) {
@@ -145,7 +146,7 @@
             }
           });
 
-          if (!VENUE_MAP) {
+          if (typeof VENUE_MAP === 'undefined') {
             map.fitBounds(markerBounds);
           }
           
