--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -3,8 +3,7 @@
   %head
     %title Search &amp; Restore
     = stylesheet_link_tag 'base'
-    - if @uses_datepicker
-      = stylesheet_link_tag 'jquery_ui'
+    = stylesheet_link_tag 'jquery_ui'
     = csrf_meta_tag
 
   - body_attributes = {:class => @page_class}
@@ -47,7 +46,10 @@
       = content_for?(:content) ? yield(:content) : yield
       .clear
 
-    = javascript_include_tag ['jquery-5.1.min.js', 'jquery-ui-1.8.13.custom.min.js', 'jquery.cmtextconstrain.js']
+    = javascript_include_tag ['jquery-5.1.min.js', 'jquery-ui-1.8.18.custom.min.js', 'jquery.cmtextconstrain.js']
+
+    :javascript
+      $('.tabs').tabs();
 
     - if @truncate_bio
       :javascript
