Ariel should be Arial in jquery_ui.scss

--- a/public/stylesheets/sass/jquery_ui.scss
+++ b/public/stylesheets/sass/jquery_ui.scss
@@ -445,7 +445,7 @@
 .ui-tabs .ui-tabs-panel { display: block; border-width: 0; padding: 1em 1.4em; background: none; }
 .ui-tabs .ui-tabs-hide { display: none !important; }
 
-.ui-tabs { padding: 0; font-family: Ariel, sans-serif; }
+.ui-tabs { padding: 0; font-family: Arial, sans-serif; }
 .ui-tabs .ui-tabs-nav { margin: 0; padding: 0; }
 .ui-tabs .ui-tabs-nav li { list-style: none; float: left; position: relative; top: 0px; margin: 0 .2em 0 0; border-bottom: none !important; padding: 0; white-space: nowrap; }
 .ui-tabs .ui-widget-header { background: none; }
