--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -46,10 +46,11 @@
       = content_for?(:content) ? yield(:content) : yield
       .clear
 
-    = javascript_include_tag ['jquery-5.1.min.js', 'jquery-ui-1.8.18.custom.min.js', 'jquery.cmtextconstrain.js']
+    = javascript_include_tag ['jquery-5.1.min.js', 'jquery-ui-1.8.18.custom.min.js', 'jquery.cmtextconstrain.js', 'slides.min.jquery.js']
 
     :javascript
       $('.tabs').tabs();
+      $('.slides').slides({ generatePagination: false, play: 3000 });
 
     - if @truncate_bio
       :javascript
